--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.0",
+    "@sveltejs/adapter-netlify": "^1.0.0-next.65",
     "parcel": "^2.8.0"
   },
   "dependencies": {
