--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.0",
     "@sveltejs/adapter-netlify": "^1.0.0-next.65",
-    "parcel": "^2.8.0"
+    "parcel": "^2.8.0",
+    "fractional": "^1.0.0"
   },
   "dependencies": {
     "core-js": "^3.6.5",
