--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.0",
     "@sveltejs/adapter-netlify": "^1.0.0-next.65",
-    "parcel": "^2.8.0",
-    "fractional": "^1.0.0"
+    "parcel": "^2.8.0"
   },
   "dependencies": {
     "core-js": "^3.6.5",
     "fractional": "^1.0.0",
+    "fracty": "^1.0.11",
     "regenerator-runtime": "^0.13.7"
   }
 }
